# PartitioningMethods

./: .buildinfo  .gitignore  .pre-commit-config (Unicode Encoding Conflict).yaml  .pre-commit-config.yaml  LICENSE  Partitioning.py  PartitioningResults.csv  PartitioningResultsParallel.csv  README.md  ResultsPart.csv  api.html  auxfunctions.py  example.py  genindex.html  index.html  main.py  main_old.py  main_parallel.py  modules.html  objects.inv  py-modindex.html  pyproject.toml  readme.txt  requirements.txt  runp.m  search.html  searchindex.js  setup.py
.doctrees/: api.doctree  environment.pickle  index.doctree  modules.doctree
.github/workflows/: ci.yml  part-ci.yml
_modules/: index.html  pint.html
_modules/partitioning/: Partitioning.html
_sources/: api.rst.txt  index.rst.txt
docs/source/: conf.py  index.rst
docs/source/_static/css/: custom.css
src/partitioning/: Partitioning.py  __init__.py  auxfunctions.py
src/partitioning.egg-info/: PKG-INFO  SOURCES.txt
tests/: conftest.py  test_part.py
