title = "A flux partitioning package"

[owner]
name = "Einara Zahn"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "partitioning"
version = "1.0.1"
description = "A partitioning package"
requires-python = ">=3.9"
authors = [
  {name = "Einara Zahn", email = "einara.zahn@gmail.com"},
  ]
maintainers = [
  {name = "Einara Zahn", email = "einara.zahn@gmail.com"},
]
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["ET", "CO2", "partitioning", "eddy covariance", "turbulence"]
classifiers = [
  "Programming Language :: Python"
]
dependencies = [
       "matplotlib>=3.8.0,<4",
       "numpy>=1.25.1,<2",
       "pandas>=2.2.2,<3",
       "Pint>=0.24.3,<1",
       "scipy>=1.14.0,<2" ]

[project.urls]
Repository = "https://github.com/einaraz/PartitioningMethods"
